--- a/static/support.hbs
+++ b/static/support.hbs
@@ -34,43 +34,37 @@
     const textToRoom = document.getElementById('textToRoom');
     const joinRoom = document.getElementById('joinRoom');
 
+    let room_id;
 
 
     btnToRoom.onclick = () =>{
-        socket.emit('msg',textToRoom.value)
+        socket.emit ('msg', {data: textToRoom.value,room_id});
+        room_id = textToRoom.value;
     };
 
     joinRoom.onclick = ()=>{
-        socket.emit('joinRoom',{room_id:'222'})
+        room_id =textToRoom.value;
+        socket.emit('joinRoom', {room_id});
     };
 
-    socket.on('msg_resp',(data)=>{
+    socket.on('msg_resp',data=>{
         const divka = document.createElement('div');
         divka.style.border = `2px solid brown`;
         divka.style.padding = `5px` ;
-
-        divka.innerText = `Message: ${data}`;
+        divka.innerText = `User: ${data.id} \n Message: ${data.data}`;
         document.body.appendChild(divka);
-
     });
     btn.onclick = () => {
         socket.emit('message',text.value);
         text.value = "";
-
     };
 
     socket.on('respMessage',resp =>{
-
         const divka = document.createElement('div');
         divka.style.border = `1px solid yellow`;
         divka.style.padding = `5px` ;
-
         divka.innerText = `User: ${resp.id} \n Message: ${resp.data}`;
-        // divka.innerText = `User: ${resp.id} \n Message: ${resp.data}`;
         document.body.appendChild(divka);
-
-        // console.log(resp.id);
-        // console.log(resp.data);
     });
 
     socket.on('user_disc', data=>{
